--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "bootstrap": "^5.0.2",
+    "bootstrap-icons": "^1.5.0",
     "bootstrap-material-design": "^4.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
